app/styles/app.scss
/* ... */
#messages {
  width: 100vw;
  margin:0;
  border-right: 1px white solid;
  @media only screen and (max-device-width: 480px) {
    border-right: none !important;
  }
}

#messages-area {
  //height: 100%;
}

#userlist {
  width: 20vw;
  @media only screen and (max-device-width: 480px) {
    display: none;
  }
}

li.userlist-item {
}

input#input-message {
  width: 80%;
}

.message-timestamp {
  padding-right: 10px;
  text-align: right;
}

.username {
  font-weight: 700;
  overflow: hidden;
  padding-right: 15px;
  text-align: right;
}
ul {
  list-style:none;
  word-wrap:break-word;
}

input {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  -webkit-transition: border linear .2s, box-shadow linear .2s;
  -moz-transition: border linear .2s, box-shadow linear .2s;
  -o-transition: border linear .2s, box-shadow linear .2s;
  transition: border linear .2s, box-shadow linear .2s;
  color: black;
  padding: 5px;
  vertical-align: middle;
}

.cool-button {
  font-size: 18px;
  background-color: $blue;
  border: 1px solid white;
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  line-height: 1;
  padding: 5px;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  transition: all 0.10s ease-in-out;

  &:hover,
  &:focus {
    background-color: darken($blue, 15%);
    border: 1px solid darken(white, 15%);
    color: #fff;
  }

  &:disabled {
    cursor: not-allowed;
    opacity: 0.5;
  }
}

.small-cool-button {
  background-color: $green;
  border: 1px solid white;
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  line-height: 1;
  padding: 0.75em 1em;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;

  &:hover,
  &:focus {
    background-color: darken($green, 15%);
    border: 1px solid darken(white, 15%);
    color: #fff;
  }

  &:disabled {
    cursor: not-allowed;
    opacity: 0.5;
  }
}

.modal-content {
  background: $pink;
  color: yellow;
  text-shadow: #333 1px 1px 1px;
  .modal-body {
    height: 65vh;
    overflow-y: scroll;
  }
}

img.emojione {
  height: 3ex !important;
}

a {
  color: $yellow;
}

a:hover {
  color: darken($yellow, 20%);
}

.tiny {
  color: $yellow;
  font-size:12px;
}

.podcast-controls {
  text-decoration: none;
  cursor: pointer;
}

.podcast-controls:hover {
  text-decoration: none;
}

#timetableModal {
  display: block;
}

.flexbox-container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  // these are flex items
  // flex: 1; same as:
  // flex-grow: 1;
  // flex-shrink: 1;
  // flex-basis: auto;
  // flex: 1 1 auto;
  .main-content {
    color: white;
    text-shadow: #333 1px 1px 1px;
    flex: 8;
    display: flex;
    flex-direction: column;
    min-height: 0; //ff hack? https://bugzilla.mozilla.org/show_bug.cgi?id=1043520 https://bugzilla.mozilla.org/show_bug.cgi?id=570036
    overflow-y: scroll;
    @media (min-width: 768px) {
      padding: 0 2rem 0 2rem;
    }
    #chat-room {
      flex: 8;
      display: flex;
      flex-direction: column;
      #chat-area {
        position: relative;
        display: flex;
        flex-direction: row;
        flex: 1;
        min-height: 0; //ff hack? https://bugzilla.mozilla.org/show_bug.cgi?id=1043520 https://bugzilla.mozilla.org/show_bug.cgi?id=570036
        #messages {
          overflow-y: scroll;
          flex-grow: 3;
          img {
            max-width: 95%;
            max-height: 95%;
          }
        }
        #userlist {
          overflow-y: scroll;
          flex-grow: 1;
        }
        #new-messages-below {
          position: absolute;
          bottom: 0;
          color: white;
          font-size: 14px;
          background: rgba(170, 170, 170, 0.79);
          left: 0;
          width: 100%;
        }
      }
    }
    #controls {
       flex: 1;
       justify-content: center;
       display: flex;
       flex-direction: column;
    }
  }
  .radio-bar {
    flex: 0.5;
    justify-content: center;
    display: flex;
    flex-direction: column;
  }
}

.visuals {
  display: block;
  position: absolute;
  top: 0;
  z-index: -999;
  width: 100vw;
  height: 100vh;
  video {
    position: absolute;
    top: 50px;
    left: 0;
    width: 100vw;
    margin: 0 auto;
  }
}

.chat {
  height: 100vh;
}

.podcast-controls, .fa-download {
  font-size: 21px;
  color: $green;
}

.fa-download:hover {
  color: yellow;
}

.social-icons {
  li {
    a {
      text-decoration: none;
    }
    display:inline;
    font-size:40px;
  }
}

#calendar {
  margin: 0 40px 0 40px;
}

form {
  label {
    color: yellow;
  }
  textarea, select {
    color: black;
  }
  .error {
    color: red;
    background: white;
    border-radius: 3px;
    padding: 2px;
  }
}

.grid-item {
  width: 650px;
  margin-bottom: 20px;
  background: lighten($blue, 20%);
  border: 2px solid lighten($yellow, 10%);
  padding: 5px;
  border-radius: 5px;
  text-align: center;
  img {
    width: 100%;
  }
}

.track-label {
  background: $pink;
  color: $yellow;
  text-transform: uppercase;
  padding: 2px;
  &:hover {
    @include stripe-animation;
    font-style: italic;
  }
}

@import "ember-power-select";

.ember-power-select-multiple-option {
  text-shadow: none;
}

.ember-power-select-option {
  color: black;
  text-shadow: none;
}

.fc-center {
  text-shadow: 3px 3px 3px #333, 7px 7px 0 #ff00fc;
  transform: rotate(-3.5deg);
}

.locale-selector {
  font-size: 25px;
  @media screen and (min-device-width: 480px) {
    select {
      background: $pink;
      color: white;
      border: 1px solid $blue;
    }
  }
  @media only screen and (max-device-width: 480px) {
    display: none;
    visibility: hidden;
  }
}
/* ... */

